--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@ HTML CODE
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>seek coding</title>
+    <title>CODE ALPHA INTERNSHIP TASK</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@ HTML CODE
         <div class="sub-page">
             <div class="navigation-bar">
                 <div class="logo">
-                    <a href='photography.html'>Seek Coding</a>
+                    <a href='photography.html'>LOGIN PAGE</a>
                 </div>
                 <nav>
                     <ul id='MenuItems'>
@@ -47,7 +47,7 @@ HTML CODE
 	                </div>
                 </div>
                 <div class="col-1">
-                    <p class='defination'>Login and Registration Form Using<br> HTML,CSS And Javascript For More<br>Videos Please Subscribe<br>-----Seek Coding</p>
+                    <p class='defination'>Login and Registration Form Using<br> HTML,CSS And Javascript <br>INTERNSHIP </p>
                 </div>
             </div>
         </div>
